# git-env

./: .gitenv.sample  .gitignore  Cargo.toml  README.md  default.nix  flake.nix  gitenv-data  shell.nix
.tack/: pins.toml
nix/: default.nix
npins/: sources.json
src/: decrypt.rs  encrypt.rs  lib.rs  main.rs  walk.rs
